[package]
name = "space-asset"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# members
vulkano-bindless = { workspace = true, optional = true }
vulkano-bindless-macros = { workspace = true }
vulkano-bindless-shaders = { workspace = true }

# vulkan
vulkano = { workspace = true, optional = true }

# model loader
zune-image = { workspace = true, optional = true }

# async
futures = { workspace = true, optional = true }
async-std = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }

# serde
rkyv = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# profiling
profiling = { workspace = true }

# other
static_assertions = { workspace = true }
num_enum = { workspace = true }

[features]
disk = ["dep:rkyv", "glam/rkyv", "dep:zstd", "dep:zune-image"]
runtime = ["disk", "dep:vulkano-bindless", "dep:vulkano", "dep:futures", "dep:rayon", "dep:async-std"]
