[package]
name = "space-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
space-engine = { path = "../space-engine" }

# vulkan
vulkano = { workspace = true }
vulkano-win = { workspace = true }

# async
futures = { workspace = true }
async-std = { workspace = true }

# other
clap = { workspace = true }
parking_lot = { workspace = true }
