[package]
name = "space-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
space-engine = { path = "../space-engine" }
winit = { workspace = true }

# vulkan
vulkano = { workspace = true }
vulkano-win = { workspace = true }
vulkano-shaders = { workspace = true }
bytemuck = { workspace = true }

# async
futures = { workspace = true }
async-std = { workspace = true }
async-global-executor = { workspace = true }

# other
parking_lot = { workspace = true }
