[package]
name = "space-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["use-installed-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std = { workspace = true }

# dependencies for management code only, may use std
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
# my projects
space-engine = { path = "../space-engine" }
winit = { workspace = true }

# vulkan
vulkano = { workspace = true }
vulkano-win = { workspace = true }
vulkano-shaders = { workspace = true }
bytemuck = { workspace = true }

# async
futures = { workspace = true }
async-std = { workspace = true }
async-global-executor = { workspace = true }

# other
parking_lot = { workspace = true }

[build-dependencies]
spirv-builder = { workspace = true }
