[package]
name = "space-engine-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
glam = { workspace = true }
spirv-std = { workspace = true }
static_assertions = { workspace = true }
