[package]
name = "space-engine-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
vulkano-bindless-shaders = { path = "../vulkano-bindless/vulkano-bindless-shaders" }

# rust-gpu
spirv-std = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

# other
static_assertions = { workspace = true }
