[package]
name = "space-engine-shader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
# members
space-asset = { workspace = true }
vulkano-bindless-macros = { workspace = true }
vulkano-bindless-shaders = { workspace = true }

# rust-gpu
spirv-std = { workspace = true }

# bytes and numbers
glam = { workspace = true }
libm = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

# other
static_assertions = { workspace = true }
num_enum = { workspace = true }
