[package]
name = "space-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# members
space-engine-shader = { workspace = true }
vulkano-bindless = { workspace = true }
space-asset-rt = { workspace = true }
space-asset-shader = { workspace = true }

# device
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }

# async
futures = { workspace = true }

# codegen
paste = { workspace = true }
konst = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

# profiling
profiling = { workspace = true }

# other
parking_lot = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
space-engine-shader-builder = { path = "../space-engine-shader-builder" }
