[package]
name = "space-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# members
space-engine-shader = { workspace = true }
rust-gpu-bindless = { workspace = true }
rust-gpu-bindless-shaders = { workspace = true }
space-asset-rt = { workspace = true }

# vulkan
ash = { workspace = true }

# profiling
profiling = { workspace = true }

# other
anyhow = { workspace = true }

[build-dependencies]
space-engine-shader-builder = { path = "../space-engine-shader-builder" }
