[package]
name = "vulkano-bindless-shaders"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# members
vulkano-bindless-macros = { workspace = true }

# rust-gpu
spirv-std = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
static_assertions = { workspace = true }
