[package]
name = "vulkano-bindless"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
loom_tests = []

[dependencies]
# my projects
vulkano-bindless-shaders = { path = "../vulkano-bindless-shaders" }

# vulkan
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }

# async
futures = { workspace = true }
smol = { workspace = true }

# codegen
paste = { workspace = true }
konst = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

# other
parking_lot = { workspace = true }
parking_lot_core = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
once_cell = { workspace = true }
loom = { workspace = true }
ahash = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
rangemap = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
