[package]
name = "vulkano-bindless"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# members
vulkano-bindless-shaders = { workspace = true }

# device
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }

# async
futures = { workspace = true }
smol = { workspace = true }

# codegen
paste = { workspace = true }
konst = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

# profiling
profiling = { workspace = true }

# other
parking_lot = { workspace = true }
parking_lot_core = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
once_cell = { workspace = true }
loom = { workspace = true }
ahash = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
rangemap = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
loom_tests = []

profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
